# FYP-

./: AI_Driven_Water_Supply.Presentation.sln  Dockerfile  README.md  Run_All.bat  Start_Backend.bat  docker-compose.yml
.github/workflows/: dotnet-build.yml
AI_Driven_Water_Supply.Application/: AI_Driven_Water_Supply.Application.csproj  Class1.cs
AI_Driven_Water_Supply.Application/Common/: PagedResult.cs
AI_Driven_Water_Supply.Application/DTOs/: AdminDashboardMetricsDto.cs  AdminDisputeRowDto.cs  AdminNotificationPreferencesDto.cs  AdminOrderRowDto.cs  AdminProfileCountsDto.cs  LoginModel.cs  ToastModel.cs
AI_Driven_Water_Supply.Application/Interfaces/: IAdminAccessService.cs  IAdminAuditService.cs  IAdminDashboardService.cs  IAdminDisputeService.cs  IAdminPreferencesService.cs  IAdminProfileModerationService.cs  IAdminSelfProfileService.cs  IAuthService.cs  IOrderStatusService.cs  IReviewModerationService.cs  IToastService.cs  IWaterService.cs
AI_Driven_Water_Supply.Application/Models/: AttendanceLog.cs  Bill.cs  Message.cs  Order.cs  Profile.cs  Worker.cs
AI_Driven_Water_Supply.Domain/: AI_Driven_Water_Supply.Domain.csproj  Class1.cs
AI_Driven_Water_Supply.Domain/Entities/: AdminAlert.cs  AdminAuditLog.cs  Bill.cs  (+7 more)
AI_Driven_Water_Supply.Infrastructure/: AI_Driven_Water_Supply.Infrastructure.csproj  Class1.cs
AI_Driven_Water_Supply.Presentation/: AI_Driven_Water_Supply.Presentation.csproj  Program.cs  appsettings.Development.json  appsettings.json
HydroAI.Backend/: .gitignore  Dockerfile  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
(+112 files in other folders)
