[project]
name = "hydroai-backend"
version = "0.1.0"
description = "HydroAI Helper Agent – FastAPI + Gemini backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "supabase>=2.0.0",
    "google-generativeai>=0.3.0",
    "Pillow>=10.0.0",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
reportMissingImports = false
